# libappbridge

./: CMakeLists.txt  README.md  libappbridge.pc.in
src/: CMakeLists.txt  libappbridge.cpp  libappbridge.h
